* Applied latest Naraeon Common SSD Communication Engine

--- a/trunk/tester/nslogger.dproj
+++ b/trunk/tester/nslogger.dproj
@@ -139,7 +139,6 @@
             <Form>fMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="Modules\OS.Directory.pas"/>
         <DCCReference Include="Form.Setting.pas">
             <Form>fSetting</Form>
             <FormType>dfm</FormType>
@@ -152,15 +151,7 @@
         <DCCReference Include="Classes\Verifier.Thread.Copy.pas"/>
         <DCCReference Include="Classes\Verifier.Thread.Verify.pas"/>
         <DCCReference Include="Classes\Tester.Thread.Precondition.pas"/>
-        <DCCReference Include="Modules\MeasureUnit.Time.pas"/>
-        <DCCReference Include="Modules\LanguageStrings.pas"/>
-        <DCCReference Include="Modules\System.PCharVal.pas"/>
-        <DCCReference Include="Modules\Log.Templates.pas"/>
-        <DCCReference Include="Modules\Device.NumberExtractor.pas"/>
-        <DCCReference Include="WindowsFileAPI\Device.PhysicalDrive.pas"/>
-        <DCCReference Include="WindowsFileAPI\Device.SMART.List.pas"/>
         <DCCReference Include="Classes\ErrorLogger.pas"/>
-        <DCCReference Include="WindowsFileAPI\OS.SecurityDescriptor.pas"/>
         <DCCReference Include="Classes\Parser.BufferStorage.pas"/>
         <DCCReference Include="Classes\Parser.Consumer.pas"/>
         <DCCReference Include="Classes\Parser.Divider.pas"/>
@@ -183,43 +174,76 @@
         <DCCReference Include="Classes\Trace.List.pas"/>
         <DCCReference Include="Classes\Trace.PartialList.pas"/>
         <DCCReference Include="Classes\Trace.Node.pas"/>
+        <DCCReference Include="Classes\Device.SMART.Diff.pas"/>
+        <DCCReference Include="Classes\Error.List.pas"/>
+        <DCCReference Include="Modules\Device.NumberExtractor.pas"/>
+        <DCCReference Include="Modules\Device.SlotSpeed.pas"/>
+        <DCCReference Include="Modules\LanguageStrings.pas"/>
+        <DCCReference Include="Modules\Log.Templates.pas"/>
+        <DCCReference Include="Modules\MeasureUnit.Time.pas"/>
+        <DCCReference Include="Modules\OS.Directory.pas"/>
+        <DCCReference Include="Modules\OS.SetupAPI.pas"/>
+        <DCCReference Include="Modules\OS.Version.Helper.pas"/>
+        <DCCReference Include="Modules\OS.Volume.pas"/>
+        <DCCReference Include="Modules\System.PCharVal.pas"/>
+        <DCCReference Include="Modules\uSizeStrings.pas"/>
         <DCCReference Include="WindowsFileAPI\BufferInterpreter.ATA.pas"/>
-        <DCCReference Include="WindowsFileAPI\BufferInterpreter.NVMe.Samsung.pas"/>
+        <DCCReference Include="WindowsFileAPI\BufferInterpreter.NVMe.Intel.pas"/>
+        <DCCReference Include="WindowsFileAPI\BufferInterpreter.NVMe.pas"/>
         <DCCReference Include="WindowsFileAPI\BufferInterpreter.pas"/>
+        <DCCReference Include="WindowsFileAPI\BufferInterpreter.SCSI.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.ATA.Legacy.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.ATA.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.Factory.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.Intel.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.Intel.PortPart.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.OS.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.Samsung.pas"/>
+        <DCCReference Include="WindowsFileAPI\CommandSet.NVMe.WithoutDriver.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.pas"/>
         <DCCReference Include="WindowsFileAPI\CommandSet.SAT.pas"/>
-        <DCCReference Include="WindowsFileAPI\Device.BusPhysicalDrive.pas"/>
-        <DCCReference Include="WindowsFileAPI\Device.OSPhysicalDrive.pas"/>
+        <DCCReference Include="WindowsFileAPI\Device.PhysicalDrive.Bus.pas"/>
         <DCCReference Include="WindowsFileAPI\Device.PhysicalDrive.List.pas"/>
-        <DCCReference Include="WindowsFileAPI\Getter.DiskGeometry.pas"/>
-        <DCCReference Include="WindowsFileAPI\Getter.DriveAvailability.pas"/>
+        <DCCReference Include="WindowsFileAPI\Device.PhysicalDrive.OS.pas"/>
+        <DCCReference Include="WindowsFileAPI\Device.PhysicalDrive.pas"/>
+        <DCCReference Include="WindowsFileAPI\Device.SMART.List.pas"/>
+        <DCCReference Include="WindowsFileAPI\ErrorCode.List.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.DriveList.Fixed.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.DriveList.pas"/>
-        <DCCReference Include="WindowsFileAPI\Getter.NCQAvailability.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.OS.Version.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.PartitionExtent.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.PartitionList.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDrive.DiskGeometry.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDrive.DriveAvailability.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDrive.ListChange.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDrive.NCQAvailability.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDrive.PartitionList.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.Auto.pas"/>
-        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.BruteForce.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.OS.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.OS.Path.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.pas"/>
         <DCCReference Include="WindowsFileAPI\Getter.PhysicalDriveList.WMI.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.SCSIAddress.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.SlotSpeed.pas"/>
+        <DCCReference Include="WindowsFileAPI\Getter.SlotSpeedByDeviceID.pas"/>
+        <DCCReference Include="WindowsFileAPI\MeasureUnit.DataSize.pas"/>
+        <DCCReference Include="WindowsFileAPI\OS.Handle.pas"/>
+        <DCCReference Include="WindowsFileAPI\OS.SecurityDescriptor.pas"/>
+        <DCCReference Include="WindowsFileAPI\OSFile.ForInternal.pas"/>
         <DCCReference Include="WindowsFileAPI\OSFile.Handle.pas"/>
         <DCCReference Include="WindowsFileAPI\OSFile.Interfaced.pas"/>
         <DCCReference Include="WindowsFileAPI\OSFile.IoControl.pas"/>
         <DCCReference Include="WindowsFileAPI\OSFile.pas"/>
-        <DCCReference Include="Classes\Device.SMART.Diff.pas"/>
-        <DCCReference Include="WindowsFileAPI\Getter.DiskLayout.pas"/>
-        <DCCReference Include="WindowsFileAPI\Partition.List.pas"/>
-        <DCCReference Include="WindowsFileAPI\MeasureUnit.DataSize.pas"/>
-        <DCCReference Include="WindowsFileAPI\Overlapped.pas"/>
+        <DCCReference Include="WindowsFileAPI\Overlapped.AnonymousMethod.pas"/>
         <DCCReference Include="WindowsFileAPI\Overlapped.List.pas"/>
         <DCCReference Include="WindowsFileAPI\Overlapped.OS.pas"/>
-        <DCCReference Include="WindowsFileAPI\Overlapped.AnonymousMethod.pas"/>
-        <DCCReference Include="WindowsFileAPI\ErrorCode.List.pas"/>
-        <DCCReference Include="Classes\Error.List.pas"/>
+        <DCCReference Include="WindowsFileAPI\Overlapped.pas"/>
+        <DCCReference Include="WindowsFileAPI\Partition.List.pas"/>
+        <DCCReference Include="Modules\Version.pas"/>
+        <DCCReference Include="WindowsFileAPI\Registry.Helper.Internal.pas"/>
+        <DCCReference Include="WindowsFileAPI\Registry.Helper.pas"/>
+        <DCCReference Include="WindowsFileAPI\WMI.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
